[package]
name = "serde_json_tests"
version = "0.7.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_macros"]
with-syntex = ["syntex", "serde_codegen"]
nightly-testing = ["clippy", "serde_json/clippy"]

[build-dependencies]
syntex = { git = "https://github.com/benashford/syntex", branch = "experimental", optional = true }
serde_codegen = { git = "https://github.com/benashford/serde", branch = "experimental", optional = true }
skeptic = "^0.4.0"

[dependencies]
clippy = { version = "^0.*", optional = true }
num = "*"
rustc-serialize = "*"
serde = { git = "https://github.com/benashford/serde", branch = "experimental" }
serde_json = { version = "*", path = "../json" }
serde_macros = { git = "https://github.com/benashford/serde", branch = "experimental", optional = true }
skeptic = "^0.4.0"

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
path = "benches/bench.rs"
